fix timeline and order