@@ -17,9 +17,7 @@ import org.springframework.transaction.annotation.Transactional;
 
 import java.math.BigDecimal;
 import java.time.LocalDateTime;
-import java.util.Map;
-import java.util.Optional;
-import java.util.UUID;
+import java.util.*;
 
 @Service
 @RequiredArgsConstructor
@@ -28,6 +26,7 @@ public class PaymentServiceImpl implements PaymentService {
 
     @Value("${VNP_HASHSECRET}")
     private String VNP_SECRET;
+
     @Value("${VNP_URL}")
     private String VNP_URL;
 
@@ -37,263 +36,354 @@ public class PaymentServiceImpl implements PaymentService {
     private final PaymentRepository paymentRepository;
     private final TransactionHistoryRepository transactionHistoryRepository;
     private final UserRepository userRepository;
+    private final OrderServiceRepository orderServiceRepository;
 
-    // ===============================
-    // 🔹 TẠO LINK THANH TOÁN / CẬP NHẬT PAYMENT
-    // ===============================
+    // ============================================================
+    // CREATE PAYMENT URL
+    // ============================================================
     @Override
     @Transactional
     public PaymentResponse createPaymentUrl(PaymentDto dto, UUID userId) {
-        User user = userRepository.findById(userId)
+
+        userRepository.findById(userId)
                 .orElseThrow(() -> new ResourceNotFoundException("User not found"));
+
         RentalOrder order = rentalOrderRepository.findById(dto.getOrderId())
                 .orElseThrow(() -> new ResourceNotFoundException("Order not found"));
 
-        short type = dto.getPaymentType(); // 1=cọc, 2=phần còn lại, 3=toàn bộ, 4=hoàn tiền
-        if (type < 1 || type > 4)
-            throw new BadRequestException("paymentType phải là 1(cọc), 2(phần còn lại), 3(toàn bộ), 4(hoàn tiền)");
+        short type = dto.getPaymentType();
+        if (type < 1 || type > 5)
+            throw new BadRequestException("Invalid payment type");
 
+        // ============================
+        // TYPE 5 - SERVICE PAYMENT
+        // ============================
+        if (type == 5)
+            return createServicePayment(order);
+
+        Vehicle vehicle = getMainVehicle(order);
+        BigDecimal total = order.getTotalPrice();
         String method = Optional.ofNullable(dto.getMethod()).orElse("VNPAY");
-        BigDecimal total = order.getTotalPrice().abs();
 
-        // Lấy payment hiện có của order
-        Payment payment = paymentRepository.findByRentalOrder_OrderId(order.getOrderId())
-                .stream()
-                .findFirst()
-                .orElseGet(() -> {
-                    Payment p = Payment.builder()
-                            .rentalOrder(order)
-                            .amount(BigDecimal.ZERO)
-                            .remainingAmount(total)
-                            .method(method)
-                            .paymentType((short) 1)
-                            .status(PaymentStatus.PENDING)
-                            .build();
-                    return paymentRepository.save(p);
-                });
-
-        // Xác định số tiền thanh toán
+        // ============================
+        // CALC AMOUNT dựa vào type
+        // ============================
         BigDecimal amount;
-        switch (type) {
-            case 1 -> amount = total.multiply(BigDecimal.valueOf(0.5)); // đặt cọc
-            case 2 -> amount = total.subtract(payment.getAmount());     // phần còn lại
-            case 3 -> amount = total;                                   // toàn bộ
-            case 4 -> amount = total.negate();                          // hoàn tiền
-            default -> throw new BadRequestException("Loại thanh toán không hợp lệ");
+        BigDecimal remainingAmount;
+
+        if (type == 1) {
+            // Deposit 50%
+            amount = total.divide(BigDecimal.valueOf(2), 2, java.math.RoundingMode.HALF_UP);
+            remainingAmount = total.subtract(amount);
+        } else if (type == 2) {
+            // Thanh toán còn lại - lấy từ payment deposit
+            Payment depositPayment = paymentRepository.findByRentalOrder_OrderId(order.getOrderId())
+                    .stream()
+                    .filter(p -> p.getPaymentType() == 1 && p.getStatus() == PaymentStatus.SUCCESS)
+                    .findFirst()
+                    .orElseThrow(() -> new BadRequestException("Must pay deposit first"));
+
+            amount = depositPayment.getRemainingAmount();
+            remainingAmount = BigDecimal.ZERO;
+        } else if (type == 3) {
+            // Full payment
+            amount = total;
+            remainingAmount = BigDecimal.ZERO;
+        } else {
+            amount = BigDecimal.ZERO;
+            remainingAmount = BigDecimal.ZERO;
         }
 
-        // Nếu là hoàn tiền
-        if (type == 4) return handleRefund(order, payment, amount);
+        // ============================
+        // TẠO PAYMENT MỚI cho mỗi giao dịch
+        // ============================
+        Payment payment = paymentRepository.save(
+                Payment.builder()
+                        .rentalOrder(order)
+                        .amount(amount)
+                        .remainingAmount(remainingAmount)
+                        .method(method)
+                        .paymentType(type)
+                        .status(PaymentStatus.PENDING)
+                        .build()
+        );
 
-        // Cập nhật payment hiện tại
-        BigDecimal newAmount = (type == 3) ? total : payment.getAmount().add(amount);
-        BigDecimal newRemaining = total.subtract(newAmount).max(BigDecimal.ZERO);
-        payment.setAmount(newAmount);
-        payment.setRemainingAmount(newRemaining);
-        payment.setPaymentType(type);
-        payment.setMethod(method);
-        payment.setStatus(PaymentStatus.PENDING);
-        paymentRepository.save(payment);
+        log.info("✅ Created new payment {} with amount={}, remaining={}, type={}",
+                payment.getPaymentId(), payment.getAmount(), payment.getRemainingAmount(), type);
 
-        // Cập nhật trạng thái order
-        switch (type) {
-            case 1 -> order.setStatus("PENDING_DEPOSIT");
-            case 2 -> order.setStatus("PENDING_FINAL");
-            case 3 -> order.setStatus("PENDING_FULL_PAYMENT");
+        updateOrderStatus(order, type);
+
+        // TYPE != 2 -> create DEPOSIT or FULL_PAYMENT detail
+        if (type != 2) {
+            createOrUpdateDetail(order, vehicle, getTypeName(type), amount, getDescription(type));
         }
+
+        return buildVNPayReturn(order, payment, amount);
+    }
+
+    // ============================================================
+    // TYPE 5 — SERVICE PAYMENT
+    // ============================================================
+    private PaymentResponse createServicePayment(RentalOrder order) {
+
+        List<OrderService> pending = orderServiceRepository
+                .findByOrder_OrderId(order.getOrderId())
+                .stream()
+                .filter(s -> !"SUCCESS".equalsIgnoreCase(s.getStatus()))
+                .toList();
+
+        if (pending.isEmpty())
+            throw new BadRequestException("No unpaid services found");
+
+        BigDecimal amount = pending.stream()
+                .map(s -> Optional.ofNullable(s.getCost()).orElse(BigDecimal.ZERO))
+                .reduce(BigDecimal.ZERO, BigDecimal::add);
+
+        Payment payment = paymentRepository.save(
+                Payment.builder()
+                        .rentalOrder(order)
+                        .amount(amount)
+                        .remainingAmount(BigDecimal.ZERO)
+                        .paymentType((short) 5)
+                        .method("VNPAY")
+                        .status(PaymentStatus.PENDING)
+                        .build()
+        );
+
+        order.setStatus("PENDING_SERVICE_PAYMENT");
         rentalOrderRepository.save(order);
 
-        // Ghi chi tiết transaction
-        if (type != 2) {
-            String typeName = getTypeNameByPayment(type);
+        return buildVNPayReturn(order, payment, amount);
+    }
 
-            boolean exists = rentalOrderDetailRepository.findByOrder_OrderId(order.getOrderId())
-                    .stream()
-                    .anyMatch(d -> {
-                        String t = Optional.ofNullable(d.getType()).orElse("").toUpperCase();
-                        return t.equals("DEPOSITED") || t.equals("RENTAL");
-                    });
-            Vehicle mainVehicle = rentalOrderDetailRepository.findByOrder_OrderId(order.getOrderId())
-                    .stream()
-                    .filter(d -> "RENTAL".equalsIgnoreCase(d.getType()))
-                    .map(RentalOrderDetail::getVehicle)
-                    .findFirst()
-                    .orElse(null);
-            if (!exists) {
-                RentalOrderDetail detail = RentalOrderDetail.builder()
-                        .order(order)
-                        .vehicle(mainVehicle)
-                        .type(typeName)
-                        .startTime(LocalDateTime.now())
-                        .endTime(LocalDateTime.now())
-                        .price(amount.abs())
-                        .status("PENDING")
-                        .description(getDescriptionByType(type))
-                        .build();
-                rentalOrderDetailRepository.save(detail);
-            }
+    // ============================================================
+    // CALLBACK — VNPay
+    // ============================================================
+    @Override
+    @Transactional
+    public PaymentResponse handleVNPayCallback(Map<String, String> params) {
+
+        String txnRef = params.get("vnp_TxnRef");
+        if (txnRef == null)
+            throw new BadRequestException("Missing txnRef");
+
+        log.info("📥 Callback received - txnRef: {}", txnRef);
+
+        String raw = txnRef.split("-")[0];
+        String uuid = raw.replaceFirst(
+                "(\\w{8})(\\w{4})(\\w{4})(\\w{4})(\\w{12})",
+                "$1-$2-$3-$4-$5"
+        );
+
+        log.info("🔍 Parsed paymentId: {}", uuid);
+
+        Payment payment = paymentRepository.findById(UUID.fromString(uuid))
+                .orElseThrow(() -> new ResourceNotFoundException("Payment not found"));
+
+        log.info("💳 Found payment: id={}, type={}, amount={}, remainingAmount={}",
+                payment.getPaymentId(), payment.getPaymentType(),
+                payment.getAmount(), payment.getRemainingAmount());
+
+        RentalOrder order = payment.getRentalOrder();
+        boolean ok = "00".equals(params.get("vnp_ResponseCode"));
+
+        if (!ok) {
+            payment.setStatus(PaymentStatus.FAILED);
+            order.setStatus("PAYMENT_FAILED");
+            paymentRepository.save(payment);
+            rentalOrderRepository.save(order);
+            return buildCallbackResponse(order, payment, false);
         }
 
-        // Tạo link VNPay
-        long vnpAmount = amount.abs().multiply(BigDecimal.valueOf(100)).longValue();
-        Map<String, String> vnpParams = vnpayConfig.getVNPayConfig();
-        vnpParams.put("vnp_Amount", String.valueOf(vnpAmount));
-        String encodedPaymentId = payment.getPaymentId().toString().replace("-", "");
-        String uniqueTxnRef = encodedPaymentId + "-" + System.currentTimeMillis();
-        vnpParams.put("vnp_TxnRef", uniqueTxnRef);
-        vnpParams.put("vnp_OrderInfo", "Thanh toán đơn " + order.getOrderId());
-        vnpParams.put("vnp_IpAddr", "127.0.0.1");
+        // Success
+        payment.setStatus(PaymentStatus.SUCCESS);
 
-        String queryUrl = Utils.getPaymentURL(vnpParams, true);
-        String hashData = Utils.getPaymentURL(vnpParams, false);
-        String vnpSecureHash = Utils.hmacSHA512(VNP_SECRET, hashData);
-        queryUrl += "&vnp_SecureHash=" + vnpSecureHash;
-        String paymentUrl = VNP_URL + "?" + queryUrl;
+        // SERVICE PAYMENT
+        if (payment.getPaymentType() == 5) {
+            handleServiceSuccess(order, payment);
+            return buildCallbackResponse(order, payment, true);
+        }
+
+        Vehicle v = getMainVehicle(order);
+
+        switch (payment.getPaymentType()) {
+            case 1 -> depositSuccess(order, payment, v);
+            case 2 -> finalSuccess(order, payment);
+            case 3 -> fullSuccess(order, payment, v);
+        }
+
+        paymentRepository.save(payment);
+        rentalOrderRepository.save(order);
+
+        recordTransaction(order, payment, getTypeName(payment.getPaymentType()));
+
+        return buildCallbackResponse(order, payment, true);
+    }
+
+    // ============================================================
+    // SERVICE SUCCESS
+    // ============================================================
+    private void handleServiceSuccess(RentalOrder order, Payment payment) {
+
+        List<OrderService> pending = orderServiceRepository
+                .findByOrder_OrderId(order.getOrderId())
+                .stream()
+                .filter(s -> !"SUCCESS".equalsIgnoreCase(s.getStatus()))
+                .toList();
+
+        pending.forEach(s -> {
+            s.setStatus("SUCCESS");
+            s.setResolvedAt(LocalDateTime.now());
+            orderServiceRepository.save(s);
+        });
+
+
+        order.setStatus("SERVICE_PAID");
+        paymentRepository.save(payment);
+        rentalOrderRepository.save(order);
+
+        recordTransaction(order, payment, "SERVICE");
+    }
+
+    // ============================================================
+    // RENTAL PAYMENT SUCCESS
+    // ============================================================
+
+    // TYPE 1 — Deposit Success
+    private void depositSuccess(RentalOrder order, Payment payment, Vehicle v) {
+
+        order.setStatus("DEPOSITED");
+
+        // amount và remainingAmount đã được set khi tạo payment
+        BigDecimal deposit = payment.getAmount();
+
+        // Create deposit detail
+        createOrUpdateDetail(order, v, "DEPOSIT", deposit, "Thanh toán đặt cọc");
+
+        // AUTO CREATE PICKUP ONCE - nếu có remainingAmount
+        if (payment.getRemainingAmount() != null && payment.getRemainingAmount().compareTo(BigDecimal.ZERO) > 0) {
+            createDetail(order, v, "PICKUP", payment.getRemainingAmount(), "Thanh toán phần còn lại");
+        }
+    }
+
+    // TYPE 2 — Final Payment Success
+    private void finalSuccess(RentalOrder order, Payment payment) {
+
+        RentalOrderDetail pickup = rentalOrderDetailRepository
+                .findByOrder_OrderId(order.getOrderId())
+                .stream()
+                .filter(d -> d.getType().equals("PICKUP"))
+                .findFirst()
+                .orElseThrow(() -> new BadRequestException("Missing PICKUP detail"));
+
+        if ("SUCCESS".equalsIgnoreCase(pickup.getStatus()))
+            throw new BadRequestException("Pickup already paid");
+
+        BigDecimal finalAmount = payment.getAmount();
+
+        order.setStatus("PAID");
+        payment.setRemainingAmount(BigDecimal.ZERO);
+
+        // CẬP NHẬT remainingAmount của payment deposit về 0
+        Payment depositPayment = paymentRepository.findByRentalOrder_OrderId(order.getOrderId())
+                .stream()
+                .filter(p -> p.getPaymentType() == 1 && p.getStatus() == PaymentStatus.SUCCESS)
+                .findFirst()
+                .orElseThrow(() -> new BadRequestException("Deposit payment not found"));
+
+        depositPayment.setRemainingAmount(BigDecimal.ZERO);
+        paymentRepository.save(depositPayment);
+
+        pickup.setStatus("SUCCESS");
+        pickup.setPrice(finalAmount);
+        rentalOrderDetailRepository.save(pickup);
+    }
+
+    // TYPE 3 — Full Payment Success
+    private void fullSuccess(RentalOrder order, Payment payment, Vehicle v) {
+
+        order.setStatus("PAID");
+
+        BigDecimal fullAmount = payment.getAmount();
+        payment.setRemainingAmount(BigDecimal.ZERO);
+
+        createOrUpdateDetail(order, v, "FULL_PAYMENT", fullAmount, "Thanh toán toàn bộ đơn");
+    }
+
+    private Vehicle getMainVehicle(RentalOrder order) {
+        return order.getDetails().stream()
+                .filter(d -> d.getType().equals("RENTAL"))
+                .map(RentalOrderDetail::getVehicle)
+                .findFirst()
+                .orElseThrow(() -> new BadRequestException("Missing RENTAL detail"));
+    }
+
+    private void createOrUpdateDetail(RentalOrder order, Vehicle v, String type, BigDecimal price, String desc) {
+
+        Optional<RentalOrderDetail> opt = rentalOrderDetailRepository
+                .findByOrder_OrderId(order.getOrderId())
+                .stream()
+                .filter(d -> d.getType().equals(type))
+                .findFirst();
+
+        if (opt.isPresent()) {
+            RentalOrderDetail d = opt.get();
+            d.setPrice(price);
+            d.setStatus("SUCCESS");
+            d.setDescription(desc);
+            d.setStartTime(LocalDateTime.now());
+            d.setEndTime(LocalDateTime.now());
+            rentalOrderDetailRepository.save(d);
+        } else {
+            createDetail(order, v, type, price, desc);
+        }
+    }
+
+    private void createDetail(RentalOrder order, Vehicle v, String type, BigDecimal price, String desc) {
+
+        RentalOrderDetail detail = RentalOrderDetail.builder()
+                .order(order)
+                .vehicle(v)
+                .type(type)
+                .startTime(LocalDateTime.now())
+                .endTime(LocalDateTime.now())
+                .price(price)
+                .status("PENDING")
+                .description(desc)
+                .build();
+
+        rentalOrderDetailRepository.save(detail);
+    }
+
+    private PaymentResponse buildVNPayReturn(RentalOrder order, Payment payment, BigDecimal amount) {
+
+        Map<String, String> params = vnpayConfig.getVNPayConfig();
+        params.put("vnp_Amount", amount.multiply(BigDecimal.valueOf(100)).toString());
+
+        String encoded = payment.getPaymentId().toString().replace("-", "");
+        String txnRef = encoded + "-" + System.currentTimeMillis();
+
+        params.put("vnp_TxnRef", txnRef);
+        params.put("vnp_OrderInfo", "Thanh toán đơn " + order.getOrderId());
+        params.put("vnp_IpAddr", "127.0.0.1");
+
+        String query = Utils.getPaymentURL(params, true);
+        String hashData = Utils.getPaymentURL(params, false);
+        String secureHash = Utils.hmacSHA512(VNP_SECRET, hashData);
 
         return PaymentResponse.builder()
                 .paymentId(payment.getPaymentId())
                 .orderId(order.getOrderId())
                 .amount(amount)
                 .remainingAmount(payment.getRemainingAmount())
-                .method(method)
+                .paymentType(payment.getPaymentType())
+                .method(payment.getMethod())
                 .status(payment.getStatus())
-                .paymentType(type)
-                .paymentUrl(paymentUrl)
-                .message("Tạo link thanh toán VNPay thành công")
+                .paymentUrl(VNP_URL + "?" + query + "&vnp_SecureHash=" + secureHash)
                 .build();
     }
 
-    // ===============================
-    // 🔹 CALLBACK VNPAY
-    // ===============================
-    @Override
-    @Transactional
-    public PaymentResponse handleVNPayCallback(Map<String, String> params) {
-        log.info("VNPay callback: {}", params);
-
-        String txnRef = params.get("vnp_TxnRef");
-        if (txnRef == null) throw new BadRequestException("Thiếu mã giao dịch VNPay");
-
-// Lấy phần UUID (trước dấu "-")
-        String rawEncodedId = txnRef.split("-")[0];
-
-// Giải mã lại thành UUID (chèn lại dấu "-")
-        if (rawEncodedId.length() != 32) {
-            throw new BadRequestException("Mã giao dịch không hợp lệ");
-        }
-        String rawPaymentId = rawEncodedId.replaceFirst(
-                "(\\w{8})(\\w{4})(\\w{4})(\\w{4})(\\w{12})",
-                "$1-$2-$3-$4-$5"
-        );
-        String responseCode = params.get("vnp_ResponseCode");
-        if (txnRef == null || responseCode == null)
-            throw new BadRequestException("VNPay callback thiếu tham số cần thiết");
-
-        UUID paymentId = UUID.fromString(rawPaymentId);
-        Payment payment = paymentRepository.findById(paymentId)
-                .orElseThrow(() -> new ResourceNotFoundException("Payment not found"));
-        RentalOrder order = payment.getRentalOrder();
-
-        boolean success = "00".equals(responseCode);
-        if (success) {
-            payment.setStatus(PaymentStatus.SUCCESS);
-
-            switch (payment.getPaymentType()) {
-                case 1 -> {
-                    order.setStatus("DEPOSITED");
-
-                    BigDecimal remaining = order.getTotalPrice().subtract(payment.getAmount());
-                    payment.setRemainingAmount(remaining.max(BigDecimal.ZERO));
-
-                    //  Nếu có RENTAL thì update nó thành DEPOSITED luôn
-                    rentalOrderDetailRepository.findByOrder_OrderId(order.getOrderId())
-                            .stream()
-                            .filter(d -> "RENTAL".equalsIgnoreCase(d.getType()))
-                            .findFirst()
-                            .ifPresent(detail -> {
-                                detail.setType("DEPOSITED");
-                                detail.setStatus("SUCCESS");
-                                detail.setPrice(payment.getAmount());
-                                detail.setDescription("Thanh toán đặt cọc");
-                                detail.setStartTime(LocalDateTime.now());
-                                detail.setEndTime(LocalDateTime.now());
-                                rentalOrderDetailRepository.save(detail);
-                            });
-
-                    if (remaining.compareTo(BigDecimal.ZERO) > 0) {
-                        Optional<RentalOrderDetail> pickupOpt = rentalOrderDetailRepository.findByOrder_OrderId(order.getOrderId())
-                                .stream()
-                                .filter(d -> "PICKUP".equalsIgnoreCase(d.getType()))
-                                .findFirst();
-                        Vehicle mainVehicle = rentalOrderDetailRepository.findByOrder_OrderId(order.getOrderId())
-                                .stream()
-                                .filter(d -> "RENTAL".equalsIgnoreCase(d.getType()))
-                                .map(RentalOrderDetail::getVehicle)
-                                .findFirst()
-                                .orElse(null);
-                        if (pickupOpt.isEmpty()) {
-                            // Chưa có PICKUP → tạo mới
-                            RentalOrderDetail pickup = RentalOrderDetail.builder()
-                                    .order(order)
-                                    .vehicle(mainVehicle)
-                                    .type("PICKUP")
-                                    .startTime(LocalDateTime.now())
-                                    .endTime(LocalDateTime.now())
-                                    .price(remaining)
-                                    .status("PENDING")
-                                    .description("Thanh toán phần còn lại khi nhận xe")
-                                    .build();
-                            rentalOrderDetailRepository.save(pickup);
-                        } else {
-                            // Có rồi → chỉ update lại giá và status
-                            RentalOrderDetail pickup = pickupOpt.get();
-                            pickup.setPrice(remaining);
-                            pickup.setStatus("PENDING");
-                            pickup.setDescription("Thanh toán phần còn lại khi nhận xe");
-                            rentalOrderDetailRepository.save(pickup);
-                        }
-                    }
-                }
-
-                case 2 -> {
-                    order.setStatus("PAID");
-                    payment.setRemainingAmount(BigDecimal.ZERO);
-
-                    //  Cập nhật PICKUP → SUCCESS
-                    rentalOrderDetailRepository.findByOrder_OrderId(order.getOrderId())
-                            .stream()
-                            .filter(d -> "PICKUP".equalsIgnoreCase(d.getType()))
-                            .reduce((first, second) -> second)
-                            .ifPresent(detail -> {
-                                detail.setStatus("SUCCESS");
-                                rentalOrderDetailRepository.save(detail);
-                            });
-                }
-
-                case 3 -> {
-                    order.setStatus("PAID");
-                    payment.setRemainingAmount(BigDecimal.ZERO);
-
-                    // ✅ Cập nhật FULL_PAYMENT → SUCCESS
-                    rentalOrderDetailRepository.findByOrder_OrderId(order.getOrderId())
-                            .stream()
-                            .filter(d -> "FULL_PAYMENT".equalsIgnoreCase(d.getType()))
-                            .reduce((first, second) -> second)
-                            .ifPresent(detail -> {
-                                detail.setStatus("SUCCESS");
-                                rentalOrderDetailRepository.save(detail);
-                            });
-                }
-            }
-
-            recordTransaction(order, payment, getTypeNameByPayment(payment.getPaymentType()));
-        } else {
-            payment.setStatus(PaymentStatus.FAILED);
-            order.setStatus("PAYMENT_FAILED");
-        }
-
-        paymentRepository.save(payment);
-        rentalOrderRepository.save(order);
+    private PaymentResponse buildCallbackResponse(RentalOrder order, Payment payment, boolean success) {
 
         return PaymentResponse.builder()
                 .paymentId(payment.getPaymentId())
@@ -301,84 +391,59 @@ public class PaymentServiceImpl implements PaymentService {
                 .amount(payment.getAmount())
                 .remainingAmount(payment.getRemainingAmount())
                 .method(payment.getMethod())
-                .status(payment.getStatus())
                 .paymentType(payment.getPaymentType())
+                .status(payment.getStatus())
                 .message(success ? "PAYMENT_SUCCESS" : "PAYMENT_FAILED")
                 .build();
     }
 
-    // ===============================
-    // 🔹 HOÀN TIỀN
-    // ===============================
-    private PaymentResponse handleRefund(RentalOrder order, Payment payment, BigDecimal amount) {
-        payment.setStatus(PaymentStatus.SUCCESS);
-        payment.setPaymentType((short) 4);
-        order.setStatus("REFUNDED");
-        paymentRepository.save(payment);
-        rentalOrderRepository.save(order);
-
-        RentalOrderDetail refundDetail = RentalOrderDetail.builder()
-                .order(order)
-                .vehicle(order.getDetails().get(0).getVehicle())
-                .type("REFUND")
-                .startTime(LocalDateTime.now())
-                .endTime(LocalDateTime.now())
-                .price(amount.abs())
-                .status("SUCCESS")
-                .description("Hoàn tiền đơn thuê #" + order.getOrderId())
-                .build();
-        rentalOrderDetailRepository.save(refundDetail);
-
-        recordTransaction(order, payment, "REFUND");
-
-        return PaymentResponse.builder()
-                .paymentId(payment.getPaymentId())
-                .orderId(order.getOrderId())
-                .amount(amount.abs())
-                .remainingAmount(BigDecimal.ZERO)
-                .method("INTERNAL_REFUND")
-                .status(PaymentStatus.SUCCESS)
-                .paymentType((short) 4)
-                .message("Hoàn tiền thành công")
-                .build();
-    }
-
-    // ===============================
-    // 🔹 TIỆN ÍCH
-    // ===============================
     private void recordTransaction(RentalOrder order, Payment payment, String type) {
-        TransactionHistory history = new TransactionHistory();
-        history.setUser(order.getCustomer());
-        history.setAmount(payment.getAmount().abs());
-        history.setType(type);
-        history.setStatus("SUCCESS");
-        history.setCreatedAt(LocalDateTime.now());
-        transactionHistoryRepository.save(history);
+
+        TransactionHistory h = new TransactionHistory();
+        h.setUser(order.getCustomer());
+        h.setAmount(payment.getAmount());
+        h.setType(type);
+        h.setStatus("SUCCESS");
+        h.setCreatedAt(LocalDateTime.now());
+
+        transactionHistoryRepository.save(h);
     }
 
-    private String getDescriptionByType(short type) {
-        return switch (type) {
-            case 1 -> "Thanh toán đặt cọc";
-            case 2 -> "Thanh toán phần còn lại";
-            case 3 -> "Thanh toán toàn bộ đơn thuê";
-            case 4 -> "Hoàn tiền cho khách hàng";
-            default -> "Giao dịch không xác định";
-        };
+    private void updateOrderStatus(RentalOrder order, short type) {
+        switch (type) {
+            case 1 -> order.setStatus("PENDING_DEPOSIT");
+            case 2 -> order.setStatus("PENDING_FINAL");
+            case 3 -> order.setStatus("PENDING_FULL_PAYMENT");
+        }
+        rentalOrderRepository.save(order);
     }
 
-    private String getTypeNameByPayment(short type) {
+    private String getTypeName(short type) {
         return switch (type) {
-            case 1 -> "DEPOSITED";
-            case 2 -> "FINAL";
+            case 1 -> "DEPOSIT";
+            case 2 -> "PICKUP";
             case 3 -> "FULL_PAYMENT";
             case 4 -> "REFUND";
+            case 5 -> "SERVICE";
             default -> "UNKNOWN";
         };
     }
 
-@Override
+    private String getDescription(short type) {
+        return switch (type) {
+            case 1 -> "Thanh toán đặt cọc";
+            case 2 -> "Thanh toán phần còn lại";
+            case 3 -> "Thanh toán toàn bộ đơn thuê";
+            case 4 -> "Hoàn tiền";
+            case 5 -> "Thanh toán dịch vụ phát sinh";
+            default -> "Không xác định";
+        };
+    }
+
+    @Override
     @Transactional
     public PaymentResponse refund(UUID orderId) {
+
         RentalOrder order = rentalOrderRepository.findById(orderId)
                 .orElseThrow(() -> new ResourceNotFoundException("Order not found"));
 
@@ -387,22 +452,20 @@ public class PaymentServiceImpl implements PaymentService {
                 .findFirst()
                 .orElseThrow(() -> new ResourceNotFoundException("Payment not found for order"));
 
-        BigDecimal refundAmount = payment.getAmount().abs();
-        if (refundAmount.compareTo(BigDecimal.ZERO) <= 0) {
+        BigDecimal refundAmount = payment.getAmount();
+        if (refundAmount.compareTo(BigDecimal.ZERO) <= 0)
             throw new BadRequestException("Không có số tiền nào để hoàn");
-        }
 
-        // Cập nhật lại payment và order
         payment.setStatus(PaymentStatus.SUCCESS);
         payment.setPaymentType((short) 4);
         order.setStatus("REFUNDED");
+
         paymentRepository.save(payment);
         rentalOrderRepository.save(order);
 
-        // Tạo order detail hoàn tiền
         RentalOrderDetail refundDetail = RentalOrderDetail.builder()
                 .order(order)
-                .vehicle(order.getDetails().get(0).getVehicle())
+                .vehicle(order.getDetails().getFirst().getVehicle())
                 .type("REFUND")
                 .startTime(LocalDateTime.now())
                 .endTime(LocalDateTime.now())
@@ -410,6 +473,7 @@ public class PaymentServiceImpl implements PaymentService {
                 .status("SUCCESS")
                 .description("Hoàn tiền đơn thuê #" + order.getOrderId())
                 .build();
+
         rentalOrderDetailRepository.save(refundDetail);
 
         recordTransaction(order, payment, "REFUND");
